        --------------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

09 September 2014 Witek Pokorski (hadr-qmd-V10-00-03)
- update to use G4CrossSectionDataSetRegistry

04 September 2014 Witek Pokorski (hadr-qmd-V10-00-02)
- Commenting out obsolete include of a cross section header file.

14 April 2014 Gunter Folger (hadr-qmd-V10-00-01)
- Changes for const G4ParticleDefintion* in use with G4KineticTrack.

14 March 2014 Tatsumi Koi (hadr-qmd-V10-00-00)
-Migrate to handle returned const pointer of G4ParticleDefinition
	src/G4QMDReaction.cc

15 October 2013 Tatsumi Koi (hadr-qmd-V09-06-10)
-Change G4ParticleTable::GetParticleTable()->GetIon(,,) 
     to G4IonTable::GetIonTable()->GetIon(,,);
	src/G4QMDReaction.cc

26 August 2013 Tatsumi Koi (hadr-qmd-V09-06-09)
- Fix double deletion problem on G4QMDCollision
	include/G4QMDCollision.hh
	src/G4QMDCollision.cc

4 June 2013 Tatsumi Koi (hadr-qmd-V09-06-08)
- Fix COPY_WITHOUT_ASSIGN
	include/G4QMDCollision.hh
	src/G4QMDCollision.cc

2 May 2013 Tatsumi Koi (hadr-qmd-V09-06-07)
- Fix for compilation problem on WIN32-VC
	src/G4QMDMeanField.cc

1 May 2013 Tatsumi Koi (hadr-qmd-V09-06-06)
- Use cmath error function
	src/G4QMDMeanField.cc

30 April 2013 Tatsumi Koi (hadr-qmd-V09-06-05)
- Delete unused private member 
	include/G4QMDGroundStateNucleus.hh  
- Fix UNINIT_CTOR
	src/G4QMDGroundStateNucleus.cc
- Fix MISSING_COPY
	src/G4QMDCollision.cc
- Add Get, Set method of model parameter
	include/G4QMDCollision.hh
- Fix MISSING_COPY
	include/G4QMDReaction.hh
- Fix VIRTUAL_DTOR
	include/G4QMDSystem.hh
	include/G4QMDNucleus.hh
	src/G4QMDNucleus.cc
- Restore to use CLHEP::HepStat::erf for avoiding compilation error in MT