@@ -103,10 +103,12 @@ G4QMDGroundStateNucleus::G4QMDGroundStateNucleus( G4int z , G4int a )
    //Nucleon primary or target case;
    if ( z == 1 && a == 1 ) {  // Hydrogen  Case or proton primary 
       SetParticipant( new G4QMDParticipant( G4Proton::Proton() , G4ThreeVector( 0.0 ) , G4ThreeVector( 0.0 ) ) );
+      ebini = 0.0; 
       return;
    }
    else if ( z == 0 && a == 1 ) { // Neutron primary 
       SetParticipant( new G4QMDParticipant( G4Neutron::Neutron() , G4ThreeVector( 0.0 ) , G4ThreeVector( 0.0 ) ) );
+      ebini = 0.0; 
       return;
    }
 
